--- a/ircas.html
+++ b/ircas.html
@@ -24,8 +24,8 @@ new PromConsole.Graph({
 <script>
 new PromConsole.Graph({
   node: document.querySelector("#irc_cli_conn"),
-  expr: "ircas_openmarket_irc_clients_connected_irc_openmarket_com_gauge",
-  name: "[[domain]]",
+  expr: "ircas_conn_clients_gauge",
+  name: "[[ircinst]]",
   renderer: "line",
   height: 150,
   yAxisFormatter: PromConsole.NumberFormatter.humanizeNoSmallPrefix,
