Oops the renderer is "area" not "stacked"

--- a/synapse.html
+++ b/synapse.html
@@ -250,7 +250,7 @@ new PromConsole.Graph({
   node: document.querySelector("#synapse_http_server_response_ru_utime"),
   expr: "rate(synapse_http_server_response_ru_utime:total[2m])",
   name: "[[servlet]]",
-  renderer: "stacked",
+  renderer: "area",
   yAxisFormatter: PromConsole.NumberFormatter.humanize,
   yHoverFormatter: PromConsole.NumberFormatter.humanize,
   yUnits: "s/s",
@@ -266,7 +266,7 @@ new PromConsole.Graph({
   node: document.querySelector("#synapse_http_server_response_db_txn_duration"),
   expr: "rate(synapse_http_server_response_db_txn_duration:total[2m])",
   name: "[[servlet]]",
-  renderer: "stacked",
+  renderer: "area",
   yAxisFormatter: PromConsole.NumberFormatter.humanize,
   yHoverFormatter: PromConsole.NumberFormatter.humanize,
   yUnits: "s/s",
